add key skills and gaps

--- a/application/signup/templates/hr_dashboard_capability.html
+++ b/application/signup/templates/hr_dashboard_capability.html
@@ -120,6 +120,48 @@
           </div><!-- end grid-row -->
         </div>
 
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Skills & Expertise by department</h3>
+
+          <table class="table--borderless">
+            <thead>
+              <tr>
+                <th>Department</th>
+                <th>Top</th>
+                <th>Gap</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Department for International Development</td>
+                <td>Project Management, Humanitarian response</td>
+                <td>Diplomacy</td>
+              </tr>
+              <tr>
+                <td>Office for National Statistics</td>
+                <td>Data analysis, Data standards</td>
+                <td>Digital</td>
+              </tr>
+              <tr>
+                <td>Ministry of Justice</td>
+                <td>Innovation, Legal</td>
+                <td>Resourcing</td>
+              </tr>
+              <tr>
+                <td>Government Digital Service</td>
+                <td>Agile, Digital</td>
+                <td>Decision making</td>
+              </tr>
+              <tr>
+                <td>Foreign and Commonwealth Office</td>
+                <td>Diplomacy, Communications</td>
+                <td>Long term strategic planning</td>
+              </tr>
+            </tbody>
+          </table>
+          <a href="/" class="foot-link">see more</a>
+        </div>
+
       </div>
     </div>
   </div>
