add learning data

--- a/application/signup/templates/hr_dashboard_capability.html
+++ b/application/signup/templates/hr_dashboard_capability.html
@@ -162,6 +162,20 @@
           <a href="/" class="foot-link">see more</a>
         </div>
 
+        <div class="dashboard__grouping">
+          <h3 class="heading-medium">Learning</h3>
+          <div class="grid-row metric__group">
+            <div class="column-third metric">
+              <h3 class="heading-small">Mentors</h3>
+              <span class="metric__value">3,227</span>
+            </div>
+            <div class="column-two-thirds metric">
+              <h3 class="heading-small">Civil Servants completing courses</h3>
+              <span class="metric__value">156,470</span>
+            </div>
+          </div><!-- end grid-row -->
+        </div>
+
       </div>
     </div>
   </div>
